# taf-code

./: LICENSE  README.md  package.json  pyproject.toml  setup.py
gemini_code/: engine.py
gemini_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
gemini_code/tools/: implementations.py
gemini_code/ui/: input_handler.py
taf_code/: __init__.py  main.py
taf_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
taf_code/tools/: definitions.py  implementations.py
taf_code/ui/: commands.py  renderer.py
taf_code/utils/: config.py  session.py
